@@ -260,6 +260,7 @@ wxGTK:
 
 - Fix using wxDatePickerCtrl in ca_ES, cz_CZ and some other locales (#24533).
 - Fix wxListBox minimum size regression in 3.2.5 (#24551).
+- Allow positioning wxDialog at specified position, at least under X11 (#24552).
 
 wxOSX:
 
